--- a/src/sass/_content.sass
+++ b/src/sass/_content.sass
@@ -3,8 +3,8 @@
 	width: 720px
 	float: left
 	+clr
-	.big__title
-		margin-top: 0
+	// .big__title
+	// 	margin-top: 0
 .long__box
 	position: relative
 	width: 100%
@@ -14,11 +14,11 @@
 		margin-bottom: 0
 	p
 		word-break: break-word
+		line-height: 19px
 .content__title
 	font-size: 18px
-	letter-spacing: 1px
 	color: #000
-	margin-bottom: 13px
+	margin-bottom: 19px
 	+tb
 .img__post
 	width: 240px
@@ -88,6 +88,7 @@
 	margin: 2px 0 0 10px
 
 .gallery
+	+clr
 	.content__title
 		text-align: center
 		text-transform: uppercase
@@ -105,12 +106,14 @@
 
 .problem
 	text-align: center
-	margin-top: 35px
+	margin-top: 15px
 	p
 		font-size: 24px
 		color: #000
 	.btn
 		width: 240px
+		margin-top: 6px
+		height: 48px
 .small_p
 	margin-top: 15px
 	p
