--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -17,8 +17,8 @@
 			</div>
 			<div class="contact__tel">
 				<i class="icon_tel"></i>
-				<a href="#">+7 (333)<span> 000-00-00</span></a>
-				<a href="#">+7 (900)<span> 000-00-00</span></a>
+				<a href="tel:+73330000000">+7 (333)<span> 000-00-00</span></a>
+				<a href="tel:+79000000000">+7 (900)<span> 000-00-00</span></a>
 			</div>
 			<div class="contact__city is-visible">
 				<p>
