--- a/src/sass/_sidebar.sass
+++ b/src/sass/_sidebar.sass
@@ -2,7 +2,7 @@
 	width: 240px
 	float: right
 .side__menu
-	margin-bottom: 40px
+	margin-bottom: 43px
 	+ img
 		margin-top: -20px
 		height: 326px
@@ -16,13 +16,14 @@
 	+box
 .side__nav
 	font-size: 0
+	background-color: #FAF8F8
 	li
 		border: 1px solid #e2e0e0
 		margin-top: 1px
-		height: 35px
 	a
 		display: inline-block
-		margin: 8px
+		margin: 0 10px
+		line-height: 32px
 		font-size: 14px
 		color: $blue
 		border: 1px solid $n
