--- a/src/includes/diplom.html
+++ b/src/includes/diplom.html
@@ -1,19 +1,19 @@
 <div class="diplom">
 	<div class="diplom_justify">
-		<a href="#">Дипломы техникума</a>
-		<a href="#">Дипломы колледжа</a>
-		<a href="#">Дипломы СССР</a>
-		<a href="#">Дипломы бакалавра</a>
+		<a href="#"><span>Дипломы техникума</span></a>
+		<a href="#"><span>Дипломы колледжа</span></a>
+		<a href="#"><span>Дипломы СССР</span></a>
+		<a href="#"><span>Дипломы бакалавра</span></a>
 	</div>
 	<div class="diplom_center">
-		<a href="#">Дипломы магистра</a>
-		<a href="#">Дипломы образца 2012 г.</a>
-		<a href="#">Дипломы образца 2014-2015 г.</a>
+		<a href="#"><span>Дипломы магистра</span></a>
+		<a href="#"><span>Дипломы образца 2012 г.</span></a>
+		<a href="#"><span>Дипломы образца 2014-2015 г.</span></a>
 	</div>
 	<div class="diplom_justify">
-		<a href="#">Диплом о неполном образовании</a>
-		<a href="#">Удостоверения</a>
-		<a href="#">Свидетельства</a>
-		<a href="#">Справки</a>
+		<a href="#"><span>Диплом о неполном образовании</span></a>
+		<a href="#"><span>Удостоверения</span></a>
+		<a href="#"><span>Свидетельства</span></a>
+		<a href="#"><span>Справки</span></a>
 	</div>
 </div>
