--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -27,8 +27,8 @@
 				</p>
 				<div class="town_window">
 					<p>Ваш город – <span>Москва</span> Угадали?</p>
-					<button class="btn_blue js_close_town_window">да</button>
-					<button class="btn_blue js_alltown_window_open">нет</button>
+					<button type="submit" class="btn_blue js_close_town_window">да</button>
+					<button type="submit" class="btn_blue js_alltown_window_open">нет</button>
 				</div>
 
 			</div>
@@ -37,13 +37,13 @@
 	<ul class="header__menu">
 		<li><a href="#">Главная</a></li>
 		<li class="has_child"><a href="#">Дипломы</a>
-			<ul class="sub__menu">
+<!-- 			<ul class="sub__menu">
 				<li><a href="#">Аттестаты</a></li>
 				<li><a href="#">Удостоверения</a></li>
 				<li><a href="#">Свидетельства</a></li>
 				<li><a href="#">Справки</a></li>
 				<li><a href="#">Контакты</a></li>
-			</ul>
+			</ul> -->
 			</li>
 		<li><a href="#">Аттестаты</a></li>
 		<li><a href="#">Удостоверения</a></li>
@@ -51,5 +51,5 @@
 		<li><a href="#">Справки</a></li>
 		<li><a href="#">Контакты</a></li>
 	</ul>
-	<button class="btn js_take_form">получить консультацию</button>
+	<button type="submit" class="btn js_take_form">получить консультацию</button>
 </div>
