--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -22,17 +22,17 @@
 	<form action="" class="side__form">
 		<div class="side__form_name">
 			<label for="name">Имя:</label>
-			<input type="text" name="name" id="" placeholder="Введите ваше имя">
+			<input required type="text" name="name" id="" placeholder="Введите ваше имя">
 		</div>
 		<div class="side__form_tel">
 			<label for="tel">Телефон:</label>
-			<input type="text" name="tel" id="" placeholder="Контактный номер">
+			<input required type="text" name="tel" id="" placeholder="Контактный номер">
 		</div>
 		<div class="side__form_area">
 			<label for="area">Комментарий:</label>
 			<textarea name="area" placeholder='Ваш комментарий'></textarea>
 		</div>
-		<button class="btn">купить</button>
+		<button type="submit" class="btn">купить</button>
 	</form>
 	<img src="../img/vjt.png" alt="">
 </div>
