--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -17,11 +17,11 @@
 				</div>
 				<div class="contact__tel">
 					<i class="icon_tel"></i>
-					<a href="#">+7 (333)<span> 000-00-00</span></a>
-					<a href="#">+7 (900)<span> 000-00-00</span></a>
+					<a href="tel:+73330000000">+7 (333)<span> 000-00-00</span></a>
+					<a href="tel:+79000000000">+7 (900)<span> 000-00-00</span></a>
 				</div>
 
-				<button class="btn">заказать звонок</button>
+				<button type="submit" class="btn js_take_form">заказать звонок</button>
 			</div>
 		</div>
 	</div>
@@ -29,25 +29,29 @@
 	<div class="js_popup_wrap all_town js_all_town">
 		<button class="btn_close js-close-popup"></button>
 		<h5 class="popup_title">Укажите ваш город</h5>
-		<dl class='popup_title_small'>
-			<dt>Выберите из списка:</dt>
-			<dd><a href="#">Москва</a></dd>
-			<dd><a href="#">Екатеринбург</a></dd>
-			<dd><a href="#">Красноярск</a></dd>
-			<dd><a href="#">Омск</a></dd>
-			<dd><a href="#">Нижний Новгород</a></dd>
-			<dd><a href="#">Москва</a></dd>
-			<dd><a href="#">Нижний Новгород</a></dd>
-			<dd><a href="#">Красноярск</a></dd>
-			<dd><a href="#">Екатеринбург</a></dd>
-			<dd><a href="#">Омск</a></dd>
-			<dd><a href="#">Москва</a></dd>
-			<dd><a href="#">Екатеринбург</a></dd>
-		</dl>
+		<div class='popup_title_small'>
+			<h6>Выберите из списка:</h6>
+			<div class="row__justfy">
+				<a href="#">Москва</a>
+				<a href="#">Екатеринбург</a>
+				<a href="#">Красноярск</a>
+				<a href="#">Омск</a>
+				<a href="#">Нижний Новгород</a>
+			</div>
+			<div class="row__justfy">
+				<a href="#">Москва</a>
+				<a href="#">Нижний Новгород</a>
+				<a href="#">Красноярск</a>
+				<a href="#">Екатеринбург</a>
+				<a href="#">Омск</a>
+			</div>
+			<a href="#">Москва</a>
+			<a href="#">Екатеринбург</a>
+		</div>
 		<h4 class="popup_title_small">Или укажите в поле:</h4>
 		<form action="" class="my_town">
-			<input type="text" name=""  id="">
-			<button class="btn_blue">Это мой город!</button>
+			<input required type="text" name=""  id="">
+			<button type="submit" class="btn_blue">Это мой город!</button>
 		</form>
 	</div>
 	<div class="js_popup_wrap js_senks_popup senks">
@@ -57,21 +61,21 @@
 		<img class="popup_img" src="img/smile.png" alt="">
 	</div>
 	<div class="js_popup_wrap js_popup_form ">
-		<button class="btn_close js-close-popup"></button>
+		<button type="submit" class="btn_close js-close-popup"></button>
 		<form action="" class="popup__form">
 			<div class="popup__form_name">
 				<label for="name">Имя:</label>
-				<input type="text" name="name" id="" placeholder="Введите ваше имя">
+				<input required type="text" name="name" id="" placeholder="">
 			</div>
 			<div class="popup__form_tel">
 				<label for="tel">Телефон:</label>
-				<input type="text" name="tel" id="" placeholder="Контактный номер">
+				<input required type="text" name="tel" id="" placeholder="">
 			</div>
 			<div class="popup__form_area">
 				<label for="area">Комментарий:</label>
-				<textarea name="area" placeholder='Ваш комментарий'></textarea>
+				<textarea name="area" placeholder=''></textarea>
 			</div>
-			<button class="btn">получить консультацию</button>
+			<button type="submit" class="btn">получить консультацию</button>
 		</form>
 	</div>
 	<script src="js/main.js"></script>
