--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -33,10 +33,15 @@ a
 	margin: 0 auto
 	+clr
 .b_container
-	padding: 40px 20px
+	padding: 20px 20px 0
+	margin: 20px 0 40px
+	background-color: #FAFAFA
 	+box
 	+clr
-
+.get_left
+	float: left
+.get_right
+	float: right
 
 .header
 	position: relative
@@ -56,6 +61,7 @@ a
 	+box
 	p
 		color: #000
+		line-height: 16px
 .logo
 	float: left
 	margin-top: 45px
@@ -128,9 +134,9 @@ a
 			height: 13px
 	a
 		color: $gold
-		border-bottom: 1px solid $gold
+		text-decoration: underline
 		&:hover
-			border-bottom: 1px solid $n
+			text-decoration: none
 
 .town_window
 	position: absolute
@@ -178,22 +184,11 @@ a
 		font-size: 16px
 		color: #000
 		line-height: 50px
+		text-decoration: none
 		+tr(.2s)
-		&:before
-			content: ""
-			display: none
-			position: absolute
-			bottom: 12px
-			left: 0
-			width: 100%
-			height: 1px
-			background-color: $n
-			+tr(.4s)
 		&:hover
 			color: $gold
-		&:hover:before
-			display: block
-			background-color: $gold
+			text-decoration: underline
 .has_child:hover
 	> a
 		color: $gold
@@ -221,6 +216,7 @@ a
 .header .btn
 	width: 240px
 	float: right
+	height: 48px
 // BUTTON
 
 /// FOOTER
@@ -259,7 +255,6 @@ a
 		width: 184px
 		float: right
 		font-size: 16px
-		margin-top: 10px
 		+tb
 //content
 
