--- a/src/sass/_content.sass
+++ b/src/sass/_content.sass
@@ -5,16 +5,23 @@
 	+clr
 	// .big__title
 	// 	margin-top: 0
-.long__box
+	> .big__title
+		margin-top: 0
+.box_long
 	position: relative
 	width: 100%
 	margin-bottom: 20px
 	+clr
 	&:last-child
 		margin-bottom: 0
+	.content__title
+		margin-bottom: 10px
 	p
 		word-break: break-word
 		line-height: 19px
+	.box_short,
+	.box_half
+		margin-top: 0
 .content__title
 	font-size: 18px
 	color: #000
@@ -22,22 +29,24 @@
 	+tb
 .img__post
 	width: 240px
-	height: 130px
+	// height: 130px
+	height: auto
 	margin-right: 20px
 	float: left
-.short__box
+.box_short
 	display: inline-block
 	width: 320px
-	margin: 15px 20px 20px 0
+	margin: 15px 20px 8px 0
 	vertical-align: top
 	p
 		word-break: break-word
 	img
-		width: 320px
+		max-width: 100%
+		width: 100%
 		min-height: 180px
 		height: auto
 		vertical-align: top
-.half__box
+.box_half
 	display: inline-block
 	width: 375px
 	margin: 15px 0 20px 0
@@ -47,6 +56,7 @@
 	&:nth-child(odd)
 		margin-right: 0
 	img
+		max-width: 100%
 		width: 375px
 		min-height: 180px
 		height: auto
@@ -56,53 +66,30 @@
 	text-align: right
 	float: right
 	color: #39F
-	border-bottom: 1px solid #39F
+	text-decoration: underline
 	&:hover
-		border-bottom: 1px solid $n
-
-.page
-	text-align: center
-	margin-top: 10px
-	a
-		display: inline-block
-		vertical-align: top
-		margin-right: 10px
-		color: #666
-		&:last-child
-			margin-right: 0
-		&:hover
-			color: #ccc
-			.icon_prev
-				opacity: 0.7
-	.is_active
-		color: #ccc
-.icon_prev
-	display: inline-block
-	background-image: url('../img/icons/icon_prev.png')
-	width: 10px
-	height: 13px
-	margin: 2px 10px 0 0
-.icon_next
-	@extend .icon_prev
-	background-image: url("../img/icons/icon_next.png")
-	margin: 2px 0 0 10px
+		text-decoration: none
 
 .gallery
+	margin-top: 30px
 	+clr
 	.content__title
 		text-align: center
 		text-transform: uppercase
 		margin-bottom: 40px
 	&__img
-		display: block
+		width: 127px
+		height: 123px
+		height: auto
 		float: left
 		margin: 0 20px 20px 0
 		vertical-align: top
-		&:last-child
+		&:nth-child(5n+1)
 			margin-right: 0
 		img
-			width: 127px
-			height: 123px
+			max-width: 100%
+			width: 100%
+			height: auto
 
 .problem
 	text-align: center
@@ -114,12 +101,7 @@
 		width: 240px
 		margin-top: 6px
 		height: 48px
-.small_p
-	margin-top: 15px
-	p
-		font-size: 14px
-	.btn
-		margin-top: 15px
+
 
 .big__title
 	font-size: 24px
@@ -185,20 +167,71 @@
 		-webkit-border-radius: 5px
 		border-radius: 5px
 		color: #333
+		-moz-text-align-last: center
 		&:last-child
 			margin-right: 0
 		&:hover
 			background-color: #BACEFE
+		span
+			display: inline-block
+			margin: 0 auto
 .diplom_center
 	text-align: center
 	a
 		margin: 0 25px 15px 15px
 
 
+
+//news
+
+.new__wrap
+	.box_long
+		margin-bottom: 10px
+
+.small_p
+	margin-top: 24px
+	p
+		font-size: 14px
+	.btn
+		margin-top: 18px
+	+ .diplom
+		margin: 35px 0 0
+
+
+.page
+	text-align: center
+	margin-top: 10px
+	margin-left: 18px
+	a
+		display: inline-block
+		vertical-align: top
+		margin-right: 10px
+		color: #666
+		&:last-child
+			margin-right: 0
+		&:hover
+			color: #ccc
+			.icon_prev
+				opacity: 0.7
+	.is_active
+		color: #ccc
+.icon_prev
+	display: inline-block
+	background-image: url('../img/icons/icon_prev.png')
+	width: 10px
+	height: 13px
+	margin: 2px 10px 0 0
+.icon_next
+	@extend .icon_prev
+	background-image: url("../img/icons/icon_next.png")
+	margin: 2px 0 0 10px
+
+
+
 //contact.html
 .mapin
 	position: relative
-	height: 410px
+	height: 414px
 	overflow: hidden
 	padding: 1px
 	+clr
@@ -236,8 +269,7 @@
 		height: 37px
 		margin-right: 15px
 		padding: 0 5px
-		&:hover
-			box-shadow: inset 0 0 0 2px #ccc
+		// box-shadow: inset 0 0 0 2px #ccc
 		&:last-child
 			margin-right: 0
 		+placeholder
@@ -252,8 +284,7 @@
 		padding: 5px
 		border: none
 		resize: none
-		&:hover
-			box-shadow: inset 0 0 0 2px #ccc
+		// box-shadow: inset 0 0 0 2px #ccc
 		+placeholder
 			color: $blue
 			font-size: 14px
@@ -262,6 +293,7 @@
 	.btn
 		width: 211px
 		float: right
+		font-size: 14px
 
 .contact__form_theme
 	margin: 0 !important
@@ -276,9 +308,14 @@
 	margin-bottom: 5px
 	&:nth-child(even)
 		margin-right: 0
+	.more
+		font-size: 12px
+		+tb
 	img
+		max-width: 100%
 		width: 300px
-		height: 95px
+		min-height: 95px
+		height: auto
 		margin-bottom: 15px
 		vertical-align: top
 	p
