--- a/src/sass/_sidebar.sass
+++ b/src/sass/_sidebar.sass
@@ -2,35 +2,37 @@
 	width: 240px
 	float: right
 .side__menu
-	margin-bottom: 43px
+	margin-bottom: 40px//45
 	+ img
 		margin-top: -20px
 		height: 326px
+		width: 240px
 .side__title
 	padding: 0 5px
 	color: #FFF
 	background-color: $blue
 	font-size: 18px
 	line-height: 30px
-	letter-spacing: 1px
 	+box
 .side__nav
 	font-size: 0
 	background-color: #FAF8F8
 	li
 		border: 1px solid #e2e0e0
-		margin-top: 1px
+		margin-bottom: 1px
 	a
-		display: inline-block
+		display: block
 		margin: 0 10px
-		line-height: 32px
+		line-height: 34px
 		font-size: 14px
 		color: $blue
-		border: 1px solid $n
+		// border: 1px solid $n
 		+box
 		&:hover
 			color: $gold
-			border-bottom: 1px solid $gold
+			// border-bottom: 1px solid $gold
+			text-decoration: underline
+
 
 
 .side__nav.blue
@@ -60,17 +62,17 @@
 		-webkit-box-shadow: none
 		box-shadow: none
 		outline: none
-		border: 1px solid $n
+		border: 1px solid #b7b5b5
 		+placeholder
 			font-size: 12px
 			color: #CCC
 			+t
 		&:focus
-			border: 1px solid #b7b5b5
+			border: 1px solid $n
 	textarea
 		padding: 8px 5px
 		resize: none
 		height: 68px
-		border: 1px solid $n
+		border: 1px solid #b7b5b5
 	.btn
 		width: 100%
