--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -2,7 +2,7 @@
 	<div class="header__top">
 		<div class="header__top_left">
 			<a href="#" class="logo">
-				<img src="../img/logo.png" alt="">
+				<img src="img/logo.png" alt="">
 				<h1 class="logo_text">Dokymentov.net</h1>
 			</a>
 			<div class="big_title">
