--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -34,5 +34,5 @@
 		</div>
 		<button type="submit" class="btn">купить</button>
 	</form>
-	<img src="../img/vjt.png" alt="">
+	<img src="img/vjt.png" alt="">
 </div>
