--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -2,7 +2,7 @@
 		<div class="l_container">
 			<div class="footer__left">
 				<a href="#" class="logo">
-					<img src="../img/logo.png" alt="">
+					<img src="img/logo.png" alt="">
 					<h1 class="logo_text">Dokymentov.net</h1>
 				</a>
 				<div class="big_title">
@@ -61,7 +61,7 @@
 		<img class="popup_img" src="img/smile.png" alt="">
 	</div>
 	<div class="js_popup_wrap js_popup_form ">
-		<button type="submit" class="btn_close js-close-popup"></button>
+		<button class="btn_close js-close-popup"></button>
 		<form action="" class="popup__form">
 			<div class="popup__form_name">
 				<label for="name">Имя:</label>
